完成导航栏

--- a/front/templates/index.html
+++ b/front/templates/index.html
@@ -3,9 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <title>小饭桌</title>
-    <link rel="stylesheet" href="../dist/css/style.min.css">
+    <link rel="stylesheet" href="../dist/css/index.min.css">
+    <link rel="stylesheet" href="//at.alicdn.com/t/font_1477229_hgtvws7pc9i.css
+">
 </head>
 <body>
-小饭桌
+<header class="header">
+    <div class="container">
+        <div class="logo-box">
+            <a href="/"></a>
+        </div>
+
+        <ul class="nav">
+            <li class="active"><a href="/">创业资讯</a></li>
+            <li class=""><a href="/">创业课堂</a></li>
+            <li class=""><a href="/">付费资讯</a></li>
+            <li class=""><a href="/">搜索</a></li>
+        </ul>
+
+        <div class="auth-box">
+            <i class="icon-personal iconfont"></i>
+            <a href="/">注册</a>
+            /
+            <a href="/">登录</a>
+        </div>
+    </div>
+</header>
 </body>
 </html>
