--- a/front/src/css/index.scss
+++ b/front/src/css/index.scss
@@ -2,75 +2,108 @@
 @import 'constants.scss';
 
 .header {
-  width: 100%;
-  height: $navHeight;
-  background: #3a3a3a;
+    width: 100%;
+    height: $navHeight;
+    background: #3a3a3a;
+    position: fixed; //固定导航条位置
+    left: 0;
+    right: 0;
+    top: 0;
+    opacity: 0.5;
 
-  .container {
-    width: $pageWidth;
-    height: 100%;
-    //background: yellowgreen;
-    margin: 0 auto;
-    overflow: hidden;
-
-    .logo-box {
-      width: 140px;
-      height: 48px;
-      background: url("https://www.xfz.cn/static/build/images/logo.png");
-      float: left;
-      margin-top: 8px;
-
-      a {
-        display: block;
-        width: 100%;
+    .container {
+        width: $pageWidth;
         height: 100%;
-      }
-    }
+        //background: yellowgreen;
+        margin: 0 auto;
+        overflow: hidden;
 
-    .nav {
-      margin-left: 128px;
-      float: left;
-      height: $navHeight;
-      margin-top: 0;
+        .logo-box {
+            width: 140px;
+            height: 48px;
+            background: url("https://www.xfz.cn/static/build/images/logo.png");
+            float: left;
+            margin-top: 8px;
 
-      li {
-        float: left;
-        margin-right: 40px;
-        line-height: $navHeight;
-        height: $navHeight;
-        box-sizing: border-box;
-        padding-inline-start: 0;
-        list-style: none;
-
-        a {
-          color: white;
-          text-decoration: none;
+            a {
+                display: block;
+                width: 100%;
+                height: 100%;
+            }
         }
 
-        &.active {
-          border-bottom: 5px solid #5c87d9;
+        .nav {
+            margin-left: 128px;
+            float: left;
+            height: $navHeight;
+            margin-top: 0;
+
+            li {
+                float: left;
+                margin-right: 40px;
+                line-height: $navHeight;
+                height: $navHeight;
+                box-sizing: border-box;
+                padding-inline-start: 0;
+                list-style: none;
+
+                a {
+                    color: white;
+                    text-decoration: none;
+                }
+
+                &.active {
+                    border-bottom: 5px solid #5c87d9;
+                }
+            }
         }
-      }
+
+        .auth-box {
+            float: right;
+            line-height: $navHeight;
+            height: $navHeight;
+            margin-top: 0; //这里如果不设置上边距的话会有一默认的16px边距，不知道为啥
+            color: white;
+            font-size: 20px;
+            text-decoration: none;
+
+            .iconfont {
+                font-size: 25px;
+            }
+
+            a {
+                color: white;
+                font-size: 20px;
+                text-decoration: none;
+            }
+        }
     }
+}
 
-    .auth-box {
-      float: right;
-      line-height: $navHeight;
-      height: $navHeight;
-      margin-top: 0; //这里如果不设置上边距的话会有一默认的16px边距，不知道为啥
-      color: white;
-      font-size: 20px;
-      text-decoration: none;
+.main {
+    width: 100%;
+    margin-top: $navHeight + 20px; //因为固定了导航栏，所以主体部分需要下移
 
-      .iconfont {
-        font-size: 25px;
-      }
+    .wrapper {
+        width: $pageWidth;
+        margin: 0 auto;
+        background: green;
+        height: 1000px;
+        //overflow: visible;
+        overflow: hidden;
 
-      a {
-        color: white;
-        font-size: 20px;
-        text-decoration: none;
-      }
+        .news-wrapper {
+            float: left;
+            width: 798px;
+            height: 500px;
+            background: white;
+        }
+
+        .sidebar-wrapper {
+            float: right;
+            width: 356px;
+            height: 500px;
+            background: black;
+        }
     }
-  }
 }
