--- a/front/templates/index.html
+++ b/front/templates/index.html
@@ -29,5 +29,12 @@
         </div>
     </div>
 </header>
+
+<div class="main">
+    <div class="wrapper">
+        <div class="news-wrapper"></div>
+        <div class="sidebar-wrapper"></div>
+    </div>
+</div>
 </body>
 </html>
