轮播图完成 80% ，新的动画效果与圆点切换待完成

--- a/front/templates/index.html
+++ b/front/templates/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <title>小饭桌</title>
     <link rel="stylesheet" href="../dist/css/index.min.css">
-    <link rel="stylesheet" href="//at.alicdn.com/t/font_1477229_hgtvws7pc9i.css
-">
+    <link rel="stylesheet" href="//at.alicdn.com/t/font_1477229_hgtvws7pc9i.css">
+    <script src="../dist/js/jquery.min.js"></script>
+    <script src="../dist/js/index.min.js"></script>
 </head>
 <body>
 <header class="header">
     <div class="container">
+        <div class="fuck"></div>
         <div class="logo-box">
             <a href="/"></a>
         </div>
@@ -32,8 +34,32 @@
 
 <div class="main">
     <div class="wrapper">
-        <div class="news-wrapper"></div>
-        <div class="sidebar-wrapper"></div>
+        <div class="news-wrapper">
+            <div class="banner-group" id="banner-group">
+                <ul class="banner-ul" id="banner-ul">
+                    <li>
+                        <a href="#">
+                            <img src="https://static-image.xfz.cn/1570765909_110.png" alt=""/>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <img src="https://static-image.xfz.cn/1571885973_544.jpg" alt=""/>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <img src="https://static-image.xfz.cn/1571292192_9.jpg" alt=""/>
+                        </a>
+                    </li>
+                </ul>
+                <span class="arrow left-arrow" id="left-arrow">&#8249</span>
+                <span class="arrow right-arrow" id="right-arrow">&#8250</span>
+            </div>
+        </div>
+        <div class="sidebar-wrapper">
+
+        </div>
     </div>
 </div>
 </body>
