--- a/front/src/css/index.scss
+++ b/front/src/css/index.scss
@@ -94,14 +94,61 @@
 
         .news-wrapper {
             float: left;
-            width: 798px;
+            width: $mainBoxWidth;
             height: 500px;
-            background: white;
+            background: gray;
+
+            .banner-group {
+                width: 100%;
+                height: 202px;
+                background: #5c87d9;
+                position: relative;
+
+                .banner-ul {
+                    overflow: hidden;
+                    width: $mainBoxWidth * 4;
+                    position: absolute;
+
+                    li {
+                        float: left;
+                        width: $mainBoxWidth;
+                        height: 202px;
+                        //padding-inline-start: unset;
+                        list-style: none;
+
+                        img {
+                            width: $mainBoxWidth;
+                            height: 202px;
+                        }
+                    }
+
+                }
+
+                .arrow {
+                    font-family: "Roboto", "Lucida Grande", Verdana, Arial, sans-serif;
+                    font-size: 70px;
+                    color: white;
+                    position: absolute;
+                    top: 50%;
+                    margin-top: -45px;
+                    cursor: pointer;
+                    display: none;
+                }
+
+                .left-arrow {
+                    left: 20px;
+                }
+
+                .right-arrow {
+                    right: 20px;
+                }
+
+            }
         }
 
         .sidebar-wrapper {
             float: right;
-            width: 356px;
+            width: $sidebarWidth;
             height: 500px;
             background: black;
         }
