--- a/front/templates/index.html
+++ b/front/templates/index.html
@@ -55,6 +55,10 @@
                 </ul>
                 <span class="arrow left-arrow" id="left-arrow">&#8249</span>
                 <span class="arrow right-arrow" id="right-arrow">&#8250</span>
+                <div class="page-control-group">
+                    <ul class="page-control">
+                    </ul>
+                </div>
             </div>
         </div>
         <div class="sidebar-wrapper">
