完成新闻列表html与css构建

--- a/front/templates/index.html
+++ b/front/templates/index.html
@@ -35,6 +35,7 @@
 <div class="main">
     <div class="wrapper">
         <div class="news-wrapper">
+            <!--            {#            轮播图#}-->
             <div class="banner-group" id="banner-group">
                 <ul class="banner-ul" id="banner-ul">
                     <li>
@@ -59,6 +60,50 @@
                     <ul class="page-control">
                     </ul>
                 </div>
+            </div>
+            <!--            {#            新闻主体#}-->
+            <div class="list-outer-group">
+                <!--                {#                新闻类别标签#}-->
+                <ul class="list-tab">
+                    <li class="active"><a href="#">最新资讯</a></li>
+                    <li><a href="#">热点</a></li>
+                    <li><a href="#">深度报道</a></li>
+                    <li><a href="#">干货分享</a></li>
+                    <li><a href="#">投资人说</a></li>
+                </ul>
+                <!--                {#                    新闻列表#}-->
+                <ul class="list-inner-group">
+                    <li>
+                        <div class="thumbnail-group">
+                            <a href="#"><img src="https://static-image.xfz.cn/1572227963_695.jpg-website.news.list"
+                                             alt=""></a>
+                        </div>
+                        <div class="news-group">
+                            <p class="title"><a href="#">蓝港互动及蓝港科技宣布，将联合增持区块链信息服务平台火星财经</a></p>
+                            <p class="desc">蓝港互动集团此前持有火星财经15%左右的股份。</p>
+                            <p class="more">
+                                <span class="category">深度报道</span>
+                                <span class="pub-time">一小时前</span>
+                                <span class="author">康康</span>
+                            </p>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="thumbnail-group">
+                            <a href="#"><img src="https://static-image.xfz.cn/1572227963_695.jpg-website.news.list"
+                                             alt=""></a>
+                        </div>
+                        <div class="news-group">
+                            <p class="title"><a href="#">蓝港互动及蓝港科技宣布，将联合增持区块链信息服务平台火星财经</a></p>
+                            <p class="desc">蓝港互动集团此前持有火星财经15%左右的股份。</p>
+                            <p class="more">
+                                <span class="category">深度报道</span>
+                                <span class="pub-time">一小时前</span>
+                                <span class="author">康康</span>
+                            </p>
+                        </div>
+                    </li>
+                </ul>
             </div>
         </div>
         <div class="sidebar-wrapper">
