--- a/front/src/css/index.scss
+++ b/front/src/css/index.scss
@@ -1,6 +1,11 @@
 @import 'normalize.scss';
 @import 'constants.scss';
 
+
+body {
+    background: #f2f2f2;
+}
+
 .header {
     width: 100%;
     height: $navHeight;
@@ -54,7 +59,7 @@
                 }
 
                 &.active {
-                    border-bottom: 5px solid #5c87d9;
+                    border-bottom: 5px solid $themColor;
                 }
             }
         }
@@ -88,21 +93,21 @@
     .wrapper {
         width: $pageWidth;
         margin: 0 auto;
-        background: green;
-        height: 1000px;
+        //background: green;
+        //height: 1000px;
         //overflow: visible;
         overflow: hidden;
 
         .news-wrapper {
             float: left;
             width: $mainBoxWidth;
-            height: 500px;
-            background: gray;
+            //height: 500px;
+            //background: gray;
 
             .banner-group {
                 width: 100%;
                 height: 202px;
-                background: #5c87d9;
+                background: $themColor;
                 position: relative;
                 overflow: hidden; // 超出部分的隐藏
 
@@ -175,6 +180,112 @@
 
                 }
 
+            }
+
+            .list-outer-group {
+                margin-top: 15px;
+                background: #ffffff;
+
+                .list-tab {
+                    width: 100%;
+                    height: 66px;
+                    overflow: hidden;
+                    border: 1px solid #eeeeee;
+                    border-left: none;
+                    border-right: none;
+
+                    li {
+                        float: left;
+                        padding: 0 10px;
+                        //line-height: 66px;
+                        margin-top: 23px;
+
+                        a {
+                            color: #878787;
+                        }
+
+                        &:first-of-type {
+                            border-left: 5px solid $themColor;
+                        }
+
+                        &.active {
+                            a {
+                                color: #212121;
+                            }
+                        }
+                    }
+                }
+
+                .list-inner-group {
+                    li {
+                        font-family: 'Microsoft YaHei', Helvetica, Arial, sans-serif;
+                        padding: 20px 20px;
+                        overflow: hidden;
+                        border-bottom: 1px solid #eeeeee;
+
+
+                        .thumbnail-group {
+                            float: left;
+                            height: 162px;
+                            width: 226px;
+
+                            img {
+                                width: 100%;
+                                height: 100%;
+                            }
+                        }
+
+                        .news-group {
+                            width: 504px;
+                            height: 162px;
+                            float: right;
+                            position: relative;
+
+                            .title {
+                                font-size: 22px;
+
+                                a {
+                                    color: #212121;
+                                    text-decoration: none;
+
+                                    &:hover {
+                                        color: $themColor;
+                                    }
+                                }
+                            }
+
+                            .desc {
+                                font-size: 14px;
+                                color: #878787;
+                                margin-top: 10px;
+                            }
+
+                            .more {
+                                position: absolute;
+                                left: 0;
+                                right: 0;
+                                bottom: 0;
+                                font-size: 14px;
+                                color: #878787;
+
+                                .category {
+                                    color: $themColor;
+                                }
+
+                                .pub-time {
+                                    float: right;
+                                    margin-left: 20px;
+                                }
+
+                                .author {
+                                    float: right;
+
+                                }
+                            }
+                        }
+                    }
+
+                }
             }
         }
 
