--- a/front/templates/index.html
+++ b/front/templates/index.html
@@ -104,6 +104,10 @@
                         </div>
                     </li>
                 </ul>
+                <!--                加载更多按钮-->
+                <div class="load-more-group">
+                    <button class="load-more">查看更多</button>
+                </div>
             </div>
         </div>
         <div class="sidebar-wrapper">
