完成侧边栏

--- a/front/src/css/constants.scss
+++ b/front/src/css/constants.scss
@@ -3,3 +3,6 @@ $navHeight: 64px;
 $mainBoxWidth: 798px;
 $sidebarWidth: 356px;
 $themColor: #5c87d9;
+$mainFontColor: #212121;
+$assistFontColor: #878787;
+$lineColor: #eeeeee;
