--- a/front/src/css/index.scss
+++ b/front/src/css/index.scss
@@ -4,6 +4,7 @@
 
 body {
     background: #f2f2f2;
+    font-family: 'Microsoft YaHei', Helvetica, Arial, sans-serif;
 }
 
 .header {
@@ -307,8 +308,143 @@ body {
         .sidebar-wrapper {
             float: right;
             width: $sidebarWidth;
-            height: 500px;
-            background: black;
+            background: white;
+
+            .title-group {
+                padding: 18px;
+                overflow: hidden;
+                //border-bottom: 1px solid #5c87d9;
+
+                .title {
+                    float: left;
+                    font-size: 22px;
+                }
+
+                .more {
+                    float: right;
+                    color: $themColor;
+                    font-size: 14px;
+                    line-height: 32px;
+                }
+
+            }
+
+            .advertise-group {
+                img {
+                    width: 100%;
+                }
+            }
+
+            .focus-group {
+                padding: 0 20px;
+                overflow: hidden;
+
+                .left-group {
+                    width: 180px;
+                    float: left;
+
+                    li {
+                        width: 100%;
+                        float: left;
+                        height: 50px;
+                        background: url("https://www.xfz.cn/static/build/images/side-icon.png") no-repeat;
+                        background-size: 26%;
+                        margin-bottom: 20px;
+                        line-height: 50px;
+                        overflow: hidden;
+
+                        a {
+                            margin-left: 64px;
+                            color: #878787;
+                            font-size: 14px;
+                        }
+                    }
+
+                    .zhihu {
+                        background-position: 0 0;
+                    }
+
+                    .weibo {
+                        background-position: 0 -63px;
+                    }
+
+                    .toutiao {
+                        background-position: 0 -127px;
+                    }
+                }
+
+                .right-group {
+                    float: right;
+                    width: 130px;
+                    //background-size: 80%;
+                    background: url("https://www.xfz.cn/static/build/images/xfz-school-wechat-share.png") no-repeat;
+                    background-size: 100%;
+                    background-position-x: -5px;
+                    //height: ;
+
+                    .desc {
+                        margin-top: 130px;
+                        color: #878787;
+                        font-size: 12px;
+                    }
+
+                }
+            }
+
+            .hot-news-groups {
+                .hot-list-group {
+                    li {
+                        padding: 0 20px 20px;
+                        height: 80px;
+                        overflow: hidden;
+
+                        .left-group {
+                            float: left;
+                            width: 204px;
+                            overflow: hidden;
+                            height: 72px;
+                            position: relative;
+
+                            a {
+                                text-decoration: none;
+                                color: #212121;
+
+                                &:hover {
+                                    color: #5c87d9;
+                                }
+                            }
+
+                            .more {
+                                font-size: 14px;
+                                position: absolute;
+                                left: 0;
+                                right: 0;
+                                bottom: 0;
+
+                                .category {
+                                    color: #5c87d9;
+                                    float: left;
+                                }
+
+                                .pub-time {
+                                    float: right;
+                                    color: #878787;
+                                }
+                            }
+                        }
+
+                        .right-group {
+                            width: 102px;
+                            float: right;
+
+                            img {
+                                width: 100%;
+                                height: 100%;
+                            }
+                        }
+                    }
+                }
+            }
         }
     }
 }
