--- a/front/templates/index.html
+++ b/front/templates/index.html
@@ -34,6 +34,7 @@
 
 <div class="main">
     <div class="wrapper">
+        <!--        新闻-->
         <div class="news-wrapper">
             <!--            {#            轮播图#}-->
             <div class="banner-group" id="banner-group">
@@ -110,7 +111,62 @@
                 </div>
             </div>
         </div>
+        <!--        侧边-->
         <div class="sidebar-wrapper">
+            <!--            第一个部分-->
+            <div class="title-group">
+                <span class="title">在线课堂</span>
+                <a class="more" href="#">更多</a>
+            </div>
+            <!--             广告-->
+            <div class="advertise-group">
+                <a href="#"> <img src="https://static-image.xfz.cn/1570765909_110.png" alt="">
+                </a>
+            </div>
+
+            <div class="title-group">
+                <span class="title">关注小饭桌</span>
+            </div>
+
+            <div class="focus-group">
+                <ul class="left-group">
+                    <li class="zhihu">
+                        <a href="#" target="_blank">小饭桌创业课堂</a>
+                    </li>
+                    <li class="weibo">
+                        <a href="#" target="_blank">小饭桌创业课堂</a>
+                    </li>
+                    <li class="toutiao">
+                        <a href="#" target="_blank">小饭桌创业课堂</a>
+                    </li>
+                </ul>
+                <div class="right-group">
+                    <p class="desc">扫码关注小饭桌公众号</p>
+                </div>
+            </div>
+
+            <div class="hot-news-groups">
+                <div class="title-group">
+                    <span class="title">热门推荐</span>
+                </div>
+
+                <ul class="hot-list-group">
+                    <li>
+                        <div class="left-group">
+                            <p class="title"><a href="#">蓝港互动及蓝港科技宣布，将联合增持区块链...</a></p>
+                            <p class="more">
+                                <span class="category">深度报道</span>
+                                <span class="pub-time">一小时前</span>
+                            </p>
+                        </div>
+                        <div class="right-group">
+                            <a href="#"><img src="https://static-image.xfz.cn/1572227963_695.jpg-website.news.list"
+                                             alt=""></a>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+
 
         </div>
     </div>
