--- a/front/templates/index.html
+++ b/front/templates/index.html
@@ -9,6 +9,7 @@
     <script src="../dist/js/index.min.js"></script>
 </head>
 <body>
+<!--头部-->
 <header class="header">
     <div class="container">
         <div class="fuck"></div>
@@ -31,7 +32,7 @@
         </div>
     </div>
 </header>
-
+<!--中部-->
 <div class="main">
     <div class="wrapper">
         <!--        新闻-->
@@ -170,6 +171,38 @@
 
         </div>
     </div>
+</div>
+<!--底部-->
+<div class="footer">
+    <div class="top-group">
+        <div class="top-inner-group">
+            <div class="logo-box"></div>
+            <div class="detail-group">
+                <div class="line1">
+                    <ul class="links">
+                        <li><a href="#">关于小饭桌</a></li>
+                        <li><a href="#">创业课堂</a></li>
+                        <li><a href="#">寻求报道</a></li>
+                        <li><a href="#">创业礼包</a></li>
+                    </ul>
+                    <div class="about-us">
+                        <span class="title">关于我们:</span>
+                        <span class="weixin">
+                            <div class="wx-qrcode">
+                            </div>
+                            <a class="text" href="#">@小饭桌</a>
+                        </span>
+                    </div>
+                </div>
+                <div class="line2">
+                    <p class="address">地址：山东省青岛市中国石油大学华东</p>
+                    <p class="contact">400-888-888</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--    最底栏-->
+    <div class="bottom-group">の2019 北京子木投资顾问有限公司</div>
 </div>
 </body>
 </html>
