新闻页面，除评论列表外以完成

--- a/front/templates/news/index.html
+++ b/front/templates/news/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>小饭桌</title>
-    <link rel="stylesheet" href="../dist/css/index.min.css">
+    <link rel="stylesheet" href="../../dist/css/index.min.css">
     <link rel="stylesheet" href="//at.alicdn.com/t/font_1477229_hgtvws7pc9i.css">
-    <script src="../dist/js/jquery.min.js"></script>
-    <script src="../dist/js/index.min.js"></script>
+    <script src="../../dist/js/jquery.min.js"></script>
+    <script src="../../dist/js/index.min.js"></script>
 </head>
 <body>
 <!--头部-->
@@ -36,7 +36,7 @@
 <div class="main">
     <div class="wrapper">
         <!--        新闻-->
-        <div class="news-wrapper">
+        <div class="main-content-wrapper">
             <!--            {#            轮播图#}-->
             <div class="banner-group" id="banner-group">
                 <ul class="banner-ul" id="banner-ul">
@@ -75,6 +75,36 @@
                 </ul>
                 <!--                {#                    新闻列表#}-->
                 <ul class="list-inner-group">
+                    <li>
+                        <div class="thumbnail-group">
+                            <a href="#"><img src="https://static-image.xfz.cn/1572227963_695.jpg-website.news.list"
+                                             alt=""></a>
+                        </div>
+                        <div class="news-group">
+                            <p class="title"><a href="#">蓝港互动及蓝港科技宣布，将联合增持区块链信息服务平台火星财经</a></p>
+                            <p class="desc">蓝港互动集团此前持有火星财经15%左右的股份。</p>
+                            <p class="more">
+                                <span class="category">深度报道</span>
+                                <span class="pub-time">一小时前</span>
+                                <span class="author">康康</span>
+                            </p>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="thumbnail-group">
+                            <a href="#"><img src="https://static-image.xfz.cn/1572227963_695.jpg-website.news.list"
+                                             alt=""></a>
+                        </div>
+                        <div class="news-group">
+                            <p class="title"><a href="#">蓝港互动及蓝港科技宣布，将联合增持区块链信息服务平台火星财经</a></p>
+                            <p class="desc">蓝港互动集团此前持有火星财经15%左右的股份。</p>
+                            <p class="more">
+                                <span class="category">深度报道</span>
+                                <span class="pub-time">一小时前</span>
+                                <span class="author">康康</span>
+                            </p>
+                        </div>
+                    </li>
                     <li>
                         <div class="thumbnail-group">
                             <a href="#"><img src="https://static-image.xfz.cn/1572227963_695.jpg-website.news.list"
@@ -173,7 +203,7 @@
     </div>
 </div>
 <!--底部-->
-<div class="footer">
+<footer class="footer">
     <div class="top-group">
         <div class="top-inner-group">
             <div class="logo-box"></div>
@@ -203,6 +233,6 @@
     </div>
     <!--    最底栏-->
     <div class="bottom-group">の2019 北京子木投资顾问有限公司</div>
-</div>
+</footer>
 </body>
 </html>
