--- a/front/templates/news/news_detail.html
+++ b/front/templates/news/news_detail.html
@@ -73,6 +73,22 @@
                 <div class="submit-btn-group">
                     <button class="submit-btn">立即评论</button>
                 </div>
+                <ul class="comment-list">
+                    <li>
+                        <div class="comment-info">
+                            <span class="author">小知了</span>
+                            <span class="pub-time">4小时前</span>
+                        </div>
+                        <p class="comment-content">这是第一条评论</p>
+                    </li>
+                    <li>
+                        <div class="comment-info">
+                            <span class="author">小知了</span>
+                            <span class="pub-time">4小时前</span>
+                        </div>
+                        <p class="comment-content">这是第一条评论</p>
+                    </li>
+                </ul>
             </div>
         </div>
         <!--        侧边-->
