--- a/front/templates/news/news_detail.html
+++ b/front/templates/news/news_detail.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>新闻详情-小饭桌</title>
-    <link rel="stylesheet" href="../../dist/css/news_detail.min.css">
+    <link rel="stylesheet" href="../../dist/css/news/news_detail.min.css">
     <link rel="stylesheet" href="//at.alicdn.com/t/font_1477229_hgtvws7pc9i.css">
     <script src="../../dist/js/jquery.min.js"></script>
 </head>
